more compatibility tweaks

--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,8 @@
+name = "NeuroImage"
+uuid = "36ccfdca-c05f-4587-a56f-fc5962506c66"
+authors = ["Bill Gross <bill.gross@me.com>"]
+version = "0.1.0"
+
 [deps]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
